[package]
name = "rak4631-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0" }
embassy-nrf = { version = "0.8.0", features = ["nrf52840", "time-driver-rtc1"] }
embassy-usb = { version = "0.5.0" }
embassy-futures = { version = "0.1" }
nrf52840-pac = { version = "0.12" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-halt = "0.2"

[profile.release]
debug = 2
lto = true
